# 2-arbitrary-precision-integer-calculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.c  build_test.c
include/: ArbitraryInt.h  base_conversion.h  expression.h  fraction.h  operations.h  parser.h  system_utils.h
src/: ArbitraryInt.c  ArbitraryInt.h  base_conversion.c  expression.c  fraction.c  fraction.h  main.c  operations.c  parser.c  system_utils.c
tests/: CMakeLists.txt  test_arbitraryint.c  test_base_conversion.c  test_fraction.c  test_main.c  test_operations.c  test_parser.c
